Fixed the issue with cart count not showing for mobile by giving it a different className

--- a/styles/sass/_javascript-classes.scss
+++ b/styles/sass/_javascript-classes.scss
@@ -5,7 +5,7 @@
 .shopping-bag {
     position: relative;
 
-    .cart-count {
+    .cart-count, .cart-count-mobile {
         position: absolute;
         top: -6px;
         right: -6px;
